# crowdsource_pi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prefences.wxg
.circleci/: config.yml
ci/: circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos-universal.sh  circleci-build-macos.sh  circleci-build-msvc.bat  circleci-build-ubuntu-docker.sh
cmake/: fix-macos-libs.sh
cmake/in-files/: cloudsmith-upload.sh.in
data/: proto_avro.json
data/migrations/: 0001-create-targets.sql  0002-latlon-targets.sql  0002-target-indices.sql
include/: avroutils.h  connector.h  crowdsource_pi.h  routecache.h  socketutils.h  sqlutils.h
po/: POTFILES.in
server/: README  requirements.txt  server.py
src/: .#socketutils.cpp  avroutils.cpp  connector.cpp  crowdsource.sqlite  crowdsource_pi.cpp  preferences.cpp  preferences.h  routecache.cpp  socketutils.cpp  sqlutils.cpp
